--- a/ExerciseGO/Views/Account/Login.cshtml
+++ b/ExerciseGO/Views/Account/Login.cshtml
@@ -1,16 +1,15 @@
 ﻿@using ExerciseGO.Models
 @model LoginViewModel
-@{
-    ViewBag.Title = "";
-}
+
 
 <div class="text-center" id="loginPage">
+
     <div class="logo"></div>
     <!-- Main Form -->
     <div class="box">
-        <h1>Login or <a href="/Account/Register">Register</a></h1>
+        <h1 id="loginHeading">Login or <a href="/Account/Register">Register</a></h1>
         <div class="row">
-            <hr style="margin-top:0px;"/>
+            <hr />
             <div class="col-md-6 col-md-offset-1">
                 <section id="loginForm">
                     @using (Html.BeginForm("Login", "Account", new { ReturnUrl = ViewBag.ReturnUrl }, FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
@@ -19,12 +18,11 @@
                         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
                         <div class="form-group">
                             <div class="col-md-10">
-                                @Html.TextBoxFor(m => m.Email, new { @class = "form-control", @placeholder = "Email"})
+                                @Html.TextBoxFor(m => m.Email, new { @class = "form-control", @placeholder = "Email" })
                                 @Html.ValidationMessageFor(m => m.Email, "", new { @class = "text-danger" })
                             </div>
                         </div>
-                        <div class="form-group margin-bottom-sm">                        
-                                
+                        <div class="form-group margin-bottom-sm">
                             <div class="col-md-10">
                                 @Html.PasswordFor(m => m.Password, new { @class = "form-control", @placeholder = "Password" })
                                 @Html.ValidationMessageFor(m => m.Password, "", new { @class = "text-danger" })
@@ -35,20 +33,17 @@
                                 <p><a href="#">@Html.ActionLink("Forgot password", "ForgotPassword")</a></p>
                             </div>
                             <div class="etc-login-form">
-                                <input style="margin-left:9px;"type="submit" value="Login" class="btn btn-default" id="loginButton" />
+                                <input style="margin-left:9px;" type="submit" value="Login" class="btn btn-default" id="loginButton" />
                             </div>
                         </div>
                     }
                 </section>
             </div>
-        
             <div class="col-md-4">
                 @Html.Partial("_ExternalLoginsListPartial", new ExternalLoginListViewModel { ReturnUrl = ViewBag.ReturnUrl })
             </div>
         </div>
     </div>
 </div>
-
 @section Scripts {
     @Scripts.Render("~/bundles/jqueryval")
-}
