--- a/ExerciseGO/Views/ActivityLogs/Create.cshtml
+++ b/ExerciseGO/Views/ActivityLogs/Create.cshtml
@@ -1,78 +1,51 @@
 ﻿@model ExerciseGO.Models.ActivityLog
 
-@{
-    ViewBag.Title = "Create";
-}
 
-<h2>Create</h2>
+<div class="outer2">
+    @using (Html.BeginForm())
+    {
+        @Html.AntiForgeryToken()
 
+        <div class="form-horizontal thumbnail container" id="createActivity">
+            <h1 id="activityHeading" style="margin-top:6px;">Create New Activity Log</h1>
+            @Html.ValidationSummary(true, "", new { @class = "text-danger" })
 
-@using (Html.BeginForm()) 
-{
-    @Html.AntiForgeryToken()
-    
-    <div class="form-horizontal">
-        <h4>ActivityLog</h4>
-        <hr />
-        @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-        @*<div class="form-group">
-            @Html.LabelFor(model => model.LogDate, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.LogDate, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.LogDate, "", new { @class = "text-danger" })
+            <div class="form-group">
+                <div class="col-md-offset-3 col-md-6">
+                    @Html.DropDownList("TargetAreaID", null, htmlAttributes: new { @class = "form-control" })
+                    @Html.ValidationMessageFor(model => model.TargetAreaID, "", new { @class = "text-danger" })
+                </div>
             </div>
-        </div>*@
 
-        <div class="form-group">
-            @Html.LabelFor(model => model.TotalReps, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.TotalReps, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.TotalReps, "", new { @class = "text-danger" })
+            <div class="form-group">
+                <div class="col-md-offset-3 col-md-6">
+                    @Html.EditorFor(model => model.TotalReps, new { htmlAttributes = new { @class = "form-control", @placeholder = "Reps" } })
+                    @Html.ValidationMessageFor(model => model.TotalReps, "", new { @class = "text-danger" })
+                </div>
             </div>
+
+            <div class="form-group">
+                <div class="col-md-offset-3 col-md-6">
+                    @Html.EditorFor(model => model.TotalSets, new { htmlAttributes = new { @class = "form-control", @placeholder = "Sets" } })
+                    @Html.ValidationMessageFor(model => model.TotalSets, "", new { @class = "text-danger" })
+                </div>
+            </div>
+
+            <div class="form-group">
+                <div class="col-md-offset-3 col-md-6">
+                    @Html.EditorFor(model => model.Notes, new { htmlAttributes = new { @class = "form-control", @placeholder = "500 character limit...", @style = "height:100px;" } })
+                    @Html.ValidationMessageFor(model => model.Notes, "", new { @class = "text-danger" })
+                </div>
+            </div>
+
+            <div class="form-group">
+                <div class="col-md-offset-5 col-md-6" style="padding-left:40px;">
+                    <input id="showAll" type="submit" value="Create" class="btn btn-default" />
+                </div>
+            </div>
+            @Html.ActionLink("Cancel", "Index")
         </div>
-
-        <div class="form-group">
-            @Html.LabelFor(model => model.TotalSets, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.TotalSets, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.TotalSets, "", new { @class = "text-danger" })
-            </div>
-        </div>
-
-        <div class="form-group">
-            @Html.LabelFor(model => model.Notes, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.Notes, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.Notes, "", new { @class = "text-danger" })
-            </div>
-        </div>
-
-        @*<div class="form-group">
-            @Html.LabelFor(model => model.AspNetUserID, "AspNetUserID", htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.DropDownList("AspNetUserID", null, htmlAttributes: new { @class = "form-control" })
-                @Html.ValidationMessageFor(model => model.AspNetUserID, "", new { @class = "text-danger" })
-            </div>
-        </div>*@
-
-        <div class="form-group">
-            @Html.LabelFor(model => model.TargetAreaID, "TargetAreaID", htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.DropDownList("TargetAreaID", null, htmlAttributes: new { @class = "form-control" })
-                @Html.ValidationMessageFor(model => model.TargetAreaID, "", new { @class = "text-danger" })
-            </div>
-        </div>
-
-        <div class="form-group">
-            <div class="col-md-offset-2 col-md-10">
-                <input type="submit" value="Create" class="btn btn-default" />
-            </div>
-        </div>
-    </div>
-}
-
-<div>
-    @Html.ActionLink("Back to List", "Index")
+    }
 </div>
 
 @section Scripts {
