--- a/ExerciseGO/Views/Home/About.cshtml
+++ b/ExerciseGO/Views/Home/About.cshtml
@@ -1,3 +1,7 @@
-﻿<div id="map" class="container col-md-8"></div>
-<div id="list" class="col-md-4"></div>
+﻿<div class="outer2">
+    <div class="thumbnail container" style="margin-top:7%; width:700px; padding:15px;">
+        <h1 id="activityHeading" style="margin-top:6px;">Gyms Near You</h1>
+        <div id="map"></div>
+    </div>
+</div>
 
