--- a/ExerciseGO/Views/Videos/Details.cshtml
+++ b/ExerciseGO/Views/Videos/Details.cshtml
@@ -1,8 +1,8 @@
 ﻿@model ExerciseGO.Models.Video
 
-<h2 style="margin-top:40px; text-align:center">@Html.DisplayFor(model => model.VideoName)</h2>
-
-<div class="col-md-offset-3">
-    <hr />
-    <iframe width="640" height="360" src="@Html.DisplayFor(model => model.VideoLink)" frameborder="0"></iframe>
+<div class="outer">
+    <h1 id="videoTitle">@Html.DisplayFor(model => model.VideoName)</h1>
+    <div class="thumbnail container" id="videoThumbnail">
+        <iframe class="inner" src="@Html.DisplayFor(model => model.VideoLink)"></iframe>
+    </div>
 </div>
